--- a/README
+++ b/README
@@ -23,7 +23,7 @@ Eclipse CDT
 Cygwin 
 
 Cygwin gives a linux like environment on linux. If you wish to proceed in the direction of software development, using a good shell won't hurt.
-One of the other softwares is Gcw which gives excellent portability options and is a better choice for those who are looking non intensive applications like only C programming.The link is given below:
+One of the other softwares is Gcw which gives excellent portability options and is a better choice for beginners.The link is given below:
 http://sourceforge.net/projects/gcw/
  
 Have Fun!!
