--- a/README
+++ b/README
@@ -22,8 +22,8 @@ You may download many of the gcc ide's or softwares available for free on the ne
 Eclipse CDT
 Cygwin 
 
-Cygwin gives a linux like environment on linux. If you wish to proceed in the direction of software development, using a good shell won't hurt.
-One of the other softwares is Gcw which gives excellent portability options and is a better choice for beginners.The link is given below:
+Cygwin gives a linux like environment on windows. If you wish to proceed in the direction of software development, using a good shell won't hurt.
+One of the other softwares is Gcw , which gives excellent portability options and is a better choice for beginners.The link is given below:
 http://sourceforge.net/projects/gcw/
  
 Have Fun!!
