--- a/README
+++ b/README
@@ -33,3 +33,10 @@ If you wish to proceed in the direction of software development, using a good sh
 
 Have Fun!!
 
+CREDITS
+Sharat Shankar
+email Id:sharat.shankar15@gmail.com
+
+Parigyan Chandra Goyal
+email Id:panzer.surfer@gmail.com
+
